--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "devserve": "webpack-dev-server -d --config webpack.dev.config.js --content-base public/ --progress --colors",
     "devbuild": "webpack -d --config webpack.dev.config.js --profile --progress --colors",
-    "probuild": "webpack -p --config webpack.pro.config.js --profile --progress --colors",
+    "probuild": "node node_modules/webpack -p --config webpack.pro.config.js --profile --progress --colors",
     "postinstall": "npm run probuild && npm run rejoice",
     "rejoice": "echo yay!"
   },
