--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "devserve": "webpack-dev-server -d --config webpack.dev.config.js --content-base public/ --progress --colors",
     "devbuild": "webpack -d --config webpack.dev.config.js --profile --progress --colors",
-    "probuild": "node node_modules/webpack -p --config webpack.pro.config.js --profile --progress --colors",
+    "probuild": "webpack -p --config webpack.pro.config.js --profile --progress --colors",
     "postinstall": "npm run probuild && npm run rejoice",
     "rejoice": "echo yay!"
   },
@@ -27,7 +27,8 @@
     "react": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-router": "^3.0",
-    "reqwest": "^1.1.5"
+    "reqwest": "^1.1.5",
+    "webpack": "^1.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -39,7 +40,6 @@
     "file-loader": "^0.10.0",
     "image-webpack-loader": "^3.2.0",
     "style-loader": "^0.8.3",
-    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.3"
   }
 }
