--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react-dom": "^15.6.1",
     "react-router": "^3.0",
     "reqwest": "^1.1.5",
-    "webpack": "^1.14.0"
-  },
-  "devDependencies": {
+    "webpack": "^1.14.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.23.0"
+  },
+  "devDependencies": {
     "css-loader": "^0.9.1",
     "file-loader": "^0.10.0",
     "image-webpack-loader": "^3.2.0",
