--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "css-loader": "^0.9.1",
     "jsuri": "^1.3.0",
     "jsx-loader": "^0.12.2",
     "jwt-decode": "^2.1.0",
@@ -33,13 +32,14 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0"
-  },
-  "devDependencies": {
+    "babel-preset-react": "^6.23.0",
     "css-loader": "^0.9.1",
     "file-loader": "^0.10.0",
+    "style-loader": "^0.8.3"
+  },
+
+  "devDependencies": {
     "image-webpack-loader": "^3.2.0",
-    "style-loader": "^0.8.3",
     "webpack-dev-server": "^1.16.3"
   }
 }
